--- a/Computer_assignment_3/Computer_assignment_3.Rmd
+++ b/Computer_assignment_3/Computer_assignment_3.Rmd
@@ -126,7 +126,7 @@ RV1 = GenerateRV(approxcop1, 200)
 plot(RV1)
 
 ```
-
+\newpage
 \section{Exercise 3}
 ```{r data}
 fre = source("https://www.maths.lth.se/matstat/kurser/fmsn15masm23/datasets/fremantle.R")
@@ -355,75 +355,68 @@ ml.fml2.2 = fbvevd(x_dat, model = c("hr"), nsloc1 =tot.years["SOI"])
 ```
 
 ```{r Exercise 4}
-#Get margins to use in FML
-marg.fit1 = mledist(tot.years[,1], "gev", start = start)$est
-marg.fit2 = mledist(tot.years[,2], "gev", start = start)$est
 #Create copula from mvdc, fit with fmvdc, then we have fml? Or fit copula and only get r param?
-#Get some tau
-tau = 0.2
-
-#Copulas
-gumbel.cop <- gumbelCopula(iTau(gumbelCopula(), tau))
-galambos.cop <- galambosCopula (iTau(galambosCopula(), tau))
-hr.cop <-huslerReissCopula(iTau(huslerReissCopula(), tau))
-gumbel.cop = 
-
-#FML (?)
-
-#These copulas are done via Canonical
-gumb.fit = fitCopula(gumbel.cop, data = pobs(tot.years))
-galamb.fit = fitCopula(galambos.cop, data = pobs(tot.years))
-hr.fit = fitCopula(hr.cop, data = pobs(tot.years))
-
-#help
-gumb.mvdc = mvdc(gumbel.cop, margins = c("gev", "gev") , paramMargins = list(list(loc=marg.fit1[1], scale = marg.fit1[2], shape=marg.fit1[3]),list(loc=marg.fit2[1], scale = marg.fit2[2], shape=marg.fit2[3])))
-
-param= c(1,1,1,1,1,1,1)
-param = c(marg.fit1, marg.fit2, 0.2, use.names = FALSE)
-
-(gumb.mvdc.fit = fitMvdc(as.matrix(tot.years), mvdc = gumb.mvdc, start=param, method = "Nelder"))
-
-gumb.mvdc = mvdc(gumbel.cop, margins = c("gev", "gev") , paramMargins = list(list(loc=marg.fit1[1], scale = marg.fit1[2], shape=marg.fit1[3]),list(loc=marg.fit2[1], scale = marg.fit2[2], shape=marg.fit2[3])))
-
-
-#Regular EV dists. 
-(ml.neglog = fbvevd(tot.years, model= c("neglog")))
-(ml.log = fbvevd(tot.years, model= c("log")))
-(ml.hr = fbvevd(tot.years, model= c("hr") ))
-
-(ml.neglog2 = fbvevd(tot.years, model= c("neglog"), method = c("ml")))
-(ml.log2 = fbvevd(tot.years, model= c("log")))
-(ml.hr2 = fbvevd(tot.years, model= c("hr") ))
+# #Get some tau
+# tau = 0.2
+# 
+# #Copulas
+# gumbel.cop <- gumbelCopula(iTau(gumbelCopula(), tau))
+# galambos.cop <- galambosCopula (iTau(galambosCopula(), tau))
+# hr.cop <-huslerReissCopula(iTau(huslerReissCopula(), tau))
+# #FML (?)
+# 
+# #These copulas are done via Canonical
+# gumb.fit = fitCopula(gumbel.cop, data = pobs(tot.years))
+# galamb.fit = fitCopula(galambos.cop, data = pobs(tot.years))
+# hr.fit = fitCopula(hr.cop, data = pobs(tot.years))
+# 
+# #help
+# gumb.mvdc = mvdc(gumbel.cop, margins = c("gev", "gev") , paramMargins = list(list(loc=marg.fit1[1], scale = marg.fit1[2], shape=marg.fit1[3]),list(loc=marg.fit2[1], scale = marg.fit2[2], shape=marg.fit2[3])))
+# 
+# param= c(1,1,1,1,1,1,1)
+# param = c(marg.fit1, marg.fit2, 0.2, use.names = FALSE)
+# 
+# #(gumb.mvdc.fit = fitMvdc(as.matrix(tot.years), mvdc = gumb.mvdc, start=param, method = "Nelder"))
+# 
+# gumb.mvdc = mvdc(gumbel.cop, margins = c("gev", "gev") , paramMargins = list(list(loc=marg.fit1[1], scale = marg.fit1[2], shape=marg.fit1[3]),list(loc=marg.fit2[1], scale = marg.fit2[2], shape=marg.fit2[3])))
+# 
+# 
+# #Regular EV dists. 
+# (ml.neglog = fbvevd(tot.years, model= c("neglog")))
+# (ml.log = fbvevd(tot.years, model= c("log")))
+# (ml.hr = fbvevd(tot.years, model= c("hr") ))
+# 
+# (ml.neglog2 = fbvevd(tot.years, model= c("neglog")))
+# (ml.log2 = fbvevd(tot.years, model= c("log")))
+# (ml.hr2 = fbvevd(tot.years, model= c("hr") ))
 ```
 
 ```{r start with ranking data}
-tot.years[1] = rank(tot.years$SeaLevel.x)
-tot.years[2] = rank(tot.years$SeaLevel.y)
-#Emp dist func evald at 12
-emp.dist = function(data, point){
-  val = sum(data < point)/(length(data)+1)
-return(val)}
+# tot.years[1] = rank(tot.years$SeaLevel.x)
+# tot.years[2] = rank(tot.years$SeaLevel.y)
+# #Emp dist func evald at 12
+
 
 ```
 
 ```{r exercise 4.3}
-gof1 = gofEVCopula(gumb.fit@copula, as.matrix(tot.years))
-
-gof2 = gofEVCopula(galamb.fit@copula, as.matrix(tot.years))
-
-gof3 = gofEVCopula(hr.fit@copula, as.matrix(tot.years))
+# gof1 = gofEVCopula(gumb.fit@copula, as.matrix(tot.years))
+# 
+# #gof2 = gofEVCopula(galamb.fit@copula, as.matrix(tot.years))
+# 
+# #gof3 = gofEVCopula(hr.fit@copula, as.matrix(tot.years))
 
 
 ```
 
 ```{r exercise 4.4}
-w = seq(0,1, by=0.01)
-cfg = An.biv(tot.years, w, estimator=c("CFG"))
-pickands =  An.biv(tot.years, w, estimator=c("Pickands"))
-
-par(mfrow=c(2,1))
-plot(cfg)
-plot(pickands)
+# w = seq(0,1, by=0.01)
+# cfg = An.biv(tot.years, w, estimator=c("CFG"))
+# pickands =  An.biv(tot.years, w, estimator=c("Pickands"))
+# 
+# par(mfrow=c(2,1))
+# plot(cfg)
+# plot(pickands)
 ```
 
 ```{r Exercise 4.5}
@@ -508,28 +501,28 @@ quant4 = ecdf(tot.years[,2])(4.8)
 
 ```{r Exercise 6 type 1}
 #1
-u1 = quantile(tot.years[,1], probs = 0.30)
-u2 = quantile(tot.years[,2], probs = 0.30)
-#2
-mod.sym = fbvpot(tot.years, threshold = c(u1,u2), model = c("log"))
-mod.asym =  fbvpot(tot.years, threshold = c(u1,u2), model = c("aneglog"), std.err=FALSE)
-#3
-plot(mod.sym, p=c(0.75,0.9,0.95), which = 3)
-plot(mod.asym, p=c(0.75,0.9,0.95), which = 3)
-# 4
-marg1 = fpot(tot.years$SeaLevel.x, u1)$estimate
-marg2 = fpot(tot.years$SeaLevel.y, u2)$estimate
-
-x.lar = sum(tot.years$SeaLevel.x > u1)/length(tot.years$SeaLevel.x)
-
-y.lar = sum(tot.years$SeaLevel.y > u2)/length(tot.years$SeaLevel.y)
-
-x.t = -(log(1-x.lar*(1+marg1[2]*(tot.years$SeaLevel.x - u1)/marg1[1])^(-1/marg1[2])))^(-1)
-
-y.t = -(log(1-y.lar*(1+marg2[2]*(tot.years$SeaLevel.y - u2)/marg2[1])^(-1/marg2[2])))^(-1)
-
-mod.sym = fbvpot(c(x.t,y.t), threshold = c(u1,u2), model = c("log"))
- mod.asym =  fbvpot(tot.years, threshold = c(u1,u2), model = c("aneglog"), std.err=FALSE)
+# u1 = quantile(tot.years[,1], probs = 0.30)
+# u2 = quantile(tot.years[,2], probs = 0.30)
+# #2
+# mod.sym = fbvpot(tot.years, threshold = c(u1,u2), model = c("log"), std.err = FALSE)
+# mod.asym =  fbvpot(tot.years, threshold = c(u1,u2), model = c("aneglog"), std.err=FALSE)
+# #3
+# plot(mod.sym, p=c(0.75,0.9,0.95),xlab="",ylab="")
+# plot(mod.asym, p=c(0.75,0.9,0.95), which = 3)
+# # # 4
+# # marg1 = fpot(tot.years$SeaLevel.x, u1)$estimate
+# marg2 = fpot(tot.years$SeaLevel.y, u2)$estimate
+# 
+# x.lar = sum(tot.years$SeaLevel.x > u1)/length(tot.years$SeaLevel.x)
+# 
+# y.lar = sum(tot.years$SeaLevel.y > u2)/length(tot.years$SeaLevel.y)
+# 
+# x.t = -(log(1-x.lar*(1+marg1[2]*(tot.years$SeaLevel.x - u1)/marg1[1])^(-1/marg1[2])))^(-1)
+# 
+# y.t = -(log(1-y.lar*(1+marg2[2]*(tot.years$SeaLevel.y - u2)/marg2[1])^(-1/marg2[2])))^(-1)
+# 
+# mod.sym = fbvpot(c(x.t,y.t), threshold = c(u1,u2), model = c("log"))
+# mod.asym =  fbvpot(tot.years, threshold = c(u1,u2), model = c("aneglog"), std.err=FALSE)
 
 
 
@@ -538,31 +531,31 @@ mod.sym = fbvpot(c(x.t,y.t), threshold = c(u1,u2), model = c("log"))
 ```
 ```{r Exercise 6 type 1 test2}
 #1
-u1 = quantile(tot.years[,1], probs = 0.30)
-u2 = quantile(tot.years[,2], probs = 0.30)
-#2
-mod.sym = fbvpot(tot.years, threshold = c(u1,u2), model = c("log"))
-mod.asym =  fbvpot(tot.years, threshold = c(u1,u2), model = c("aneglog"), std.err=FALSE)
-#3
-plot(mod.sym, p=c(0.75,0.9,0.95), which = 3)
-plot(mod.asym, p=c(0.75,0.9,0.95), which = 3)
-# 4
-marg1 = fpot(tot.years$SeaLevel.x, u1)$estimate
-marg2 = fpot(tot.years$SeaLevel.y, u2)$estimate
-
-x.lar = sum(tot.years$SeaLevel.x > u1)/length(tot.years$SeaLevel.x)
-
-y.lar = sum(tot.years$SeaLevel.y > u2)/length(tot.years$SeaLevel.y)
-
-x.t = -(log(1-x.lar*(1+marg1[2]*(tot.years$SeaLevel.x - u1)/marg1[1])^(-1/marg1[2])))^(-1)
-
-y.t = -(log(1-y.lar*(1+marg2[2]*(tot.years$SeaLevel.y - u2)/marg2[1])^(-1/marg2[2])))^(-1)
-
-tot.years.copy = tot.years
-tot.years.copy$SeaLevel.x = x.t
-tot.years.copy$SeaLevel.y = y.t
-mod.sym = fbvpot(c(x.t,y.t), threshold = c(u1,u2), model = c("hr"))
-mod.asym =  fbvpot(tot.years, threshold = c(u1,u2), model = c("aneglog"), std.err=FALSE)
+# u1 = quantile(tot.years[,1], probs = 0.30)
+# u2 = quantile(tot.years[,2], probs = 0.30)
+# #2
+# mod.sym = fbvpot(tot.years, threshold = c(u1,u2), model = c("log"))
+# mod.asym =  fbvpot(tot.years, threshold = c(u1,u2), model = c("aneglog"), std.err=FALSE)
+# #3
+# plot(mod.sym, p=c(0.75,0.9,0.95), which = 3)
+# plot(mod.asym, p=c(0.75,0.9,0.95), which = 3)
+# # 4
+# marg1 = fpot(tot.years$SeaLevel.x, u1)$estimate
+# marg2 = fpot(tot.years$SeaLevel.y, u2)$estimate
+# 
+# x.lar = sum(tot.years$SeaLevel.x > u1)/length(tot.years$SeaLevel.x)
+# 
+# y.lar = sum(tot.years$SeaLevel.y > u2)/length(tot.years$SeaLevel.y)
+# 
+# x.t = -(log(1-x.lar*(1+marg1[2]*(tot.years$SeaLevel.x - u1)/marg1[1])^(-1/marg1[2])))^(-1)
+# 
+# y.t = -(log(1-y.lar*(1+marg2[2]*(tot.years$SeaLevel.y - u2)/marg2[1])^(-1/marg2[2])))^(-1)
+# 
+# tot.years.copy = tot.years
+# tot.years.copy$SeaLevel.x = x.t
+# tot.years.copy$SeaLevel.y = y.t
+# mod.sym = fbvpot(c(x.t,y.t), threshold = c(u1,u2), model = c("hr"))
+# mod.asym =  fbvpot(tot.years, threshold = c(u1,u2), model = c("aneglog"), std.err=FALSE)
  
 
 
@@ -640,7 +633,7 @@ prob.neglog <- pbgpd(1.95 - 1.478,4.8 -
 #neglog modell
 z = outer( x, y, pbgpd, model="neglog", mar1 = est.neglog$par[1:3], mar2 =
 est.neglog$par[4:6], dep = 1.5 )
-image.plot(x+thr[1], y+thr[2], z)
+#image.plot(x+thr[1], y+thr[2], z)
 contour(x+thr[1], y+thr[2], z,add=T)
 abline( h=thr[2], v=thr[1], lty=2 )
 ```
